# aki-resort

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  TODO.md
docs/: review.1.md  review.2.md
fixtures/: fruit.txt  fruit_footer.txt  fruit_header.txt  time.txt
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs  main.rs  run.rs
src/conf/: cmd.help.rs.txt  cmd.match.rs.txt  mod.rs  parse.rs
src/sort/: mod.rs  month.rs  numeric.rs  string.rs  time.rs  version.rs
src/sort_key/: mod.rs  numeric.rs  string.rs
src/util/: err.rs  mod.rs  opt_according_to_word.rs  opt_color_when.rs  opt_max_buffer_size.rs  opt_uc_x_param.rs
tests/: debug.rs  helper.rs  test.rs  test_e.rs  test_l.rs  test_s.rs
xtask/: Cargo.toml
xtask/src/: aki-resort-cmd.txt  cmd.txt  gen_src_cmd.rs
